# fusionlib

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py
.github/workflows/: gh-deploy.yml
api/fusionlib/: index.html
api/fusionlib.utils/: index.html
docs/: index.md
docs/api/: fusionlib.md  fusionlib.utils.md
docs/merging/: simple_averaging.md  task_arithmetic.md
fusionlib/: __init__.py
fusionlib/merge/: __init__.py  adamerging.py  average.py  concrete_mask.py  task_arithmetic.py
fusionlib/merge/wrapper/: __init__.py  block_wise_fusion.py  layer_wise_fusion.py  task_wise_fusion.py
fusionlib/utils/: __init__.py  args.py  devices.py  path.py  rich_logging.py  timer.py
fusionlib/utils/hydra/: __init__.py  hydra_program.py
fusionlib/utils/torch/: __init__.py  parameters.py  state_dict.py  state_dict_arithmetic.py
merging/simple_averaging/: index.html
merging/task_arithmetic/: index.html
search/: search_index.json
