[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "fusion"
version = "0.0.1"
description = "This is a Python package designed to provide functionality related to model fusion."

[project.urls]
repository = "https://github.com/tanganke/fusion"

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
