[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "fusionlib"
version = "0.0.2"
description = "This is a Python package designed to provide functionality related to model fusion."
readme = "README.md"

[project.urls]
repository = "https://github.com/tanganke/fusionlib"

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
